tests/ui/subcommand_opt_vec.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_opt_vec.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: Option<Vec<T>> type is not allowed for subcommand
